Adicionando handler para deletar usuário
